--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,11 @@
             <version>5.0.6</version>
         </dependency>
 
-
+        <dependency>
+            <groupId>com.google.firebase</groupId>
+            <artifactId>firebase-admin</artifactId>
+            <version>6.8.1</version>
+        </dependency>
 
         <dependency>
             <groupId>com.github.sarxos</groupId>
@@ -51,6 +55,7 @@
             <artifactId>javase</artifactId>
             <version>3.3.3</version>
         </dependency>
+
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
